--- a/dash_kijiji/templates/dash_kijiji/account_list.html
+++ b/dash_kijiji/templates/dash_kijiji/account_list.html
@@ -1,16 +1,27 @@
+{% load staticfiles %}
+<html>
+<head>
+    <title>Notifications Portal</title>
+    <script src="{% static 'dash_kijiji/js/websocketbridge.js' %}" type="text/javascript"></script>
+</head>
+
+<body>
 <style>a {text-decoration: none; color : #000;}</style>
-<h3>Accounts List:</h3>
-{% if account_list %}
-    {% for account in account_list %}
-    <b><a href="/profile/{{ account.unm }}/">{{ account.unm }}</a></b>
-        <ul>
-            {% for case in account.case_set.all %}
-            <li>{{ case }}</li>
-            {% empty %}
-            <li><i>none</i></li>
-            {% endfor %}
-        </ul>
+<pre><h3>Accounts List:</h3>{% if account_list %}{% for account in account_list %}
+    <b><a href="/profile/{{ account.unm }}/">{{ account.unm }}</a></b><br>
+        {% for case in account.case_set.all %}* {{ case }}
+        {% empty %}<i>none</i>
+        {% endfor %}
     {% endfor %}
 {% else %}
 <b>No accounts yet.</b>
 {% endif %}
+</pre></body>
+
+</html>
+
+
+
+
+
+
