--- a/dash_kijiji/templates/dash_kijiji/case_terminal.html
+++ b/dash_kijiji/templates/dash_kijiji/case_terminal.html
@@ -25,8 +25,14 @@ p.scrollable {
     </p>
     <p>
       <form action='' method='POST'>
-        <button type='submit'>Run test</button>{% csrf_token %}
-        <input type="hidden" value="telegram" name="script_name">
+        <button type='submit'>Run</button>{% csrf_token %}
+        <input type="hidden"  name="case_id" value="{{ case_id }}">
+        <input type="hidden"  name="action" value="run">
+      </form>
+      <form action='' method='POST'>
+        <button type='submit'>Kill</button>{% csrf_token %}
+        <input type="hidden"  name="case_id" value="{{ case_id }}">
+        <input type="hidden"  name="action" value="kill">
       </form>
     </p>
     <script>   // todo: move js elsewhere
