- user model to handle cases

--- a/dash_kijiji/templates/dash_kijiji/case_terminal.html
+++ b/dash_kijiji/templates/dash_kijiji/case_terminal.html
@@ -60,8 +60,8 @@
           </tr></table>
         </div>
         <div class="tab-pane fade" id="settings">
-          <span class="card text-white bg-info mb-3 scrollable" style="border: 20px solid #1F9BCF; line-height: 2">
-            <h6 style="color: #fff">Please select which of your ads should be active</h6>
+          <span class="card text-primary mb-3 scrollable" style="border: 2px solid #1a1a1a; line-height: 2; background-color: #f7f7f9">
+            <h6 style="color: #1a1a1a">Please select which of your ads should be active</h6>
             <div class="form-group">
               {% for ad in case.kijijiad_set.all %}
 
