--- a/dash_kijiji/templates/dash_kijiji/case_terminal.html
+++ b/dash_kijiji/templates/dash_kijiji/case_terminal.html
@@ -49,7 +49,7 @@
           <a class="nav-link" data-toggle="tab" href="#settings">Settings</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Log Out</a>
+          <a class="nav-link" href="/logout">Log Out</a>
         </li>
       </ul>
       <div id="myTabContent" class="tab-content">
